# low-bit-Shampoo

./: .gitignore  README.md  main_demo.py  plot_eigenvalues.py  plot_metrics.py  requirements.txt  train_cifar.py
cudaC_python/: CMakeLists.txt  README.md
cudaC_python/csrc/: kernels.cu  kernels.cuh  ops.cu  ops.cuh  pythonInterface.cpp
logs/: adamw.csv  shampoo1_adamw_bits4.csv  shampoo2_adamw_bits4.csv  shampoo2_adamw_bits4_debug.csv  shampoo2_adamw_tophalf.csv  shampoo2_adamw_tophalf_eigen.csv
models/: densenet.py  resnet.py  swin.py  vgg.py  vit.py
optimizers/: matrix_functions.py  shampoo1.py  shampoo2.py
qtensor/: cextension.py  functional.py  utils.py
